namespace Assets.Scripts.Enemy
{
    internal static class EnemyConstants
    {
        //Movements
        public const string IDLE = "Idle";
        public const string MOVE = "Move";
        public const string ATTACK = "Attack";
        public const string STUNNED = "Stunned";


        // Game object
        public const string PLAYER = "Player";

        //MethodName
        public const string RED_COLOR_BLINK = "RedColorBlink";
        public const string CANCEL_RED_BLINK = "CancelRedBlink";
    }
}
